--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>
 	Comments for Content by Chris	</title>
-	<atom:link href="http://contentbychris.github.io/comments/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://contentbychris.github.io/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://contentbychris.github.io/</link>
 	<description>Techinal Writing &#124; SEO Content</description>
 	<lastBuildDate>Sat, 01 Aug 2020 10:01:33 +0000</lastBuildDate>
@@ -20,7 +20,7 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>http://contentbychris.github.io/2020/08/01/hello-world/#comment-1</link>
+		<link>https://contentbychris.github.io/2020/08/01/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Sat, 01 Aug 2020 10:01:33 +0000</pubDate>
