--- a/wordpress/d41d8-web-agency-about/index.html
+++ b/wordpress/d41d8-web-agency-about/index.html
@@ -230,7 +230,7 @@
 				<div class="elementor-element elementor-element-75e5ebd elementor-button-info elementor-align-center elementor-widget elementor-widget-button" data-id="75e5ebd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://bit.ly/2EAwteb" class="elementor-button-link elementor-button elementor-size-md elementor-animation-pulse" role="button">
+			<a href="https://bit.ly/2EAwteb" target="_blank" class="elementor-button-link elementor-button elementor-size-md elementor-animation-pulse" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Click here</span>
 		</span>
