--- a/d41d8-web-agency-portfolio/index.html
+++ b/d41d8-web-agency-portfolio/index.html
@@ -169,13 +169,8 @@
 			</div>
 		</div>
 				<div class="elementor-element elementor-element-3c3823a elementor-column elementor-col-50 elementor-top-column" data-id="3c3823a" data-element_type="column">
-			<div class="elementor-column-wrap  elementor-element-populated">
+			<div class="elementor-column-wrap">
 					<div class="elementor-widget-wrap">
-				<div class="elementor-element elementor-element-67f2603 elementor-widget elementor-widget-text-editor" data-id="67f2603" data-element_type="widget" data-widget_type="text-editor.default">
-				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p><strong>Under Construction…</strong></p></div>
-				</div>
-				</div>
 						</div>
 			</div>
 		</div>
