--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					<div class="elementor-button-wrapper">
 			<a href="/d41d8-web-agency-portfolio/" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">folio</span>
+						<span class="elementor-button-text">portfolio</span>
 		</span>
 					</a>
 		</div>
