--- a/d41d8-web-agency-contact/index.html
+++ b/d41d8-web-agency-contact/index.html
@@ -190,7 +190,7 @@
 				<h3 class="elementor-icon-box-title">
 					<span>Phone</span>
 				</h3>
-								<p class="elementor-icon-box-description">803-728-8632</p>
+								<p class="elementor-icon-box-description">+63-906-553-9067</p>
 							</div>
 		</div>
 				</div>
@@ -212,7 +212,7 @@
 				<h3 class="elementor-icon-box-title">
 					<span>Email</span>
 				</h3>
-								<p class="elementor-icon-box-description">info@writing-job.com</p>
+								<p class="elementor-icon-box-description">chris.viray@gmail.com</p>
 							</div>
 		</div>
 				</div>
@@ -234,7 +234,7 @@
 				<h3 class="elementor-icon-box-title">
 					<span>Offices</span>
 				</h3>
-								<p class="elementor-icon-box-description">86 Ocean Way Drive, San Benito</p>
+								<p class="elementor-icon-box-description">Quezon City, Philippines</p>
 							</div>
 		</div>
 				</div>
